--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Sun Aug 28 19:37:27 PDT 2011
-app.grails.version=1.3.7
+#Fri Sep 07 08:53:18 MDT 2012
+app.grails.version=2.1.0
 app.name=airbrake
-app.version=0.1
-plugins.hibernate=1.3.7
-plugins.tomcat=1.3.7
+app.version=0.2
+plugins.hibernate=2.1.0
+plugins.tomcat=2.1.0
