renamed test controller to airbraketest controller and updated url mapping

--- a/plugin.xml
+++ b/plugin.xml
@@ -11,7 +11,7 @@ Log exceptions to Airbrake
     <resource>Config</resource>
     <resource>DataSource</resource>
     <resource>UrlMappings</resource>
-    <resource>TestController</resource>
+    <resource>AirbrakeTestController</resource>
   </resources>
   <dependencies />
   <behavior />
